--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.0.1",
     "chalk": "^4.1.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.4",
